View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025128 | Community | OCCT:Modeling Algorithms | public | 2014-08-06 08:59 | 2014-11-11 12:57 |
Reporter | emv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025128: Memory leak in BOPDS_DS::Paves() | ||||
Description | Memory leak has been detected in BOPDS_DS::Paves(). The issue comes from OCC Forum: http://www.opencascade.org/org/forum/thread_26382/?forum=3 | ||||
Additional information and documentation updates | class BOPDS_DS method void BOPDS_DS::Paves(const Standard_Integer theEdge, BOPDS_ListOfPave& theLP) class BOPDS_PaveBlock method void BOPDS_PaveBlock::Update(BOPDS_ListOfPaveBlock& theLPB, const Standard_Boolean theFlag) Using NCollection_Array1 class to ensure proper allocation and deallocation of memory. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25128 has been created by emv. SHA-1: d7d13cb8462eb52ebdcec467a89a6756e05960c7 This branch includes the following new commits: new d7d13cb 0025128: Memory leak in BOPDS_DS::Paves() Detailed log of new commits: commit d7d13cb8462eb52ebdcec467a89a6756e05960c7 Author: emv Date: Wed Aug 6 09:08:16 2014 +0400 0025128: Memory leak in BOPDS_DS::Paves() class BOPDS_DS method void BOPDS_DS::Paves(const Standard_Integer theEdge, BOPDS_ListOfPave& theLP) Free allocated memory. |
|
Git branch is ready to be reviewed. |
|
Please use NCollection_Array or other class to ensure that allocation / deallocation is organized properly and not done manually in C-style. |
|
Branch CR25128 has been updated forcibly by emv. SHA-1: 1014b44a71bb9652ad62772bb508d55032961d57 |
|
Git branch is ready to be reviewed. |
|
Branch CR25128 has been updated forcibly by emv. SHA-1: d373c569dd885c5cc3492f7293328b169a65723d |
|
No remarks, please test |
|
Branch CR25128 has been updated forcibly by apv. SHA-1: 23e974c34c35767eb7355e7606064be4fb897770 |
|
Dear BugMaster, Branch CR25128 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 23e974c34c35767eb7355e7606064be4fb897770 Number of compiler warnings: occt component: Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 348727836 / 348628408 Total CPU difference: 43993.71000000004 / 43340.71000000007 Testing on Windows: Total MEMORY difference: 239015780 / 239709728 Total CPU difference: 30140.171875 / 28459.046875 |
|
Branch CR25128 has been deleted by inv. SHA-1: 23e974c34c35767eb7355e7606064be4fb897770 |
occt: master 7a76337e 2014-08-07 06:09:12 Committer: bugmaster Details Diff |
0025128: Memory leak in BOPDS_DS::Paves() class BOPDS_DS method void BOPDS_DS::Paves(const Standard_Integer theEdge, BOPDS_ListOfPave& theLP) class BOPDS_PaveBlock method void BOPDS_PaveBlock::Update(BOPDS_ListOfPaveBlock& theLPB, const Standard_Boolean theFlag) Using NCollection_Array1 class to ensure proper allocation and deallocation of memory. |
Affected Issues 0025128 |
|
mod - src/BOPDS/BOPDS.cdl | Diff File | ||
mod - src/BOPDS/BOPDS_DS.cxx | Diff File | ||
mod - src/BOPDS/BOPDS_MapOfPave.hxx | Diff File | ||
mod - src/BOPDS/BOPDS_PaveBlock.cxx | Diff File | ||
add - src/BOPDS/BOPDS_VectorOfPave.hxx | Diff File | ||
mod - src/BOPDS/FILES | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-08-06 08:59 | emv | New Issue | |
2014-08-06 08:59 | emv | Assigned To | => emv |
2014-08-06 09:08 | git | Note Added: 0030592 | |
2014-08-06 09:10 | emv | Note Added: 0030593 | |
2014-08-06 09:10 | emv | Assigned To | emv => abv |
2014-08-06 09:10 | emv | Status | new => resolved |
2014-08-06 09:10 | emv | Additional Information Updated | |
2014-08-06 09:18 | emv | Description Updated | |
2014-08-06 09:46 | abv | Note Added: 0030596 | |
2014-08-06 09:46 | abv | Assigned To | abv => emv |
2014-08-06 09:46 | abv | Status | resolved => assigned |
2014-08-07 10:09 | git | Note Added: 0030612 | |
2014-08-07 10:12 | emv | Note Added: 0030613 | |
2014-08-07 10:12 | emv | Assigned To | emv => abv |
2014-08-07 10:12 | emv | Status | assigned => resolved |
2014-08-07 10:12 | emv | Additional Information Updated | |
2014-08-07 11:36 | git | Note Added: 0030615 | |
2014-08-07 11:46 | abv | Note Added: 0030616 | |
2014-08-07 11:46 | abv | Assigned To | abv => bugmaster |
2014-08-07 11:46 | abv | Status | resolved => reviewed |
2014-08-08 15:56 |
|
Assigned To | bugmaster => apv |
2014-08-08 16:10 | git | Note Added: 0030635 | |
2014-08-12 13:40 |
|
Test case number | => Not needed |
2014-08-12 13:40 |
|
Target Version | => 6.8.0 |
2014-08-12 13:44 |
|
Note Added: 0030677 | |
2014-08-12 13:44 |
|
Assigned To | apv => bugmaster |
2014-08-12 13:44 |
|
Status | reviewed => tested |
2014-08-15 11:25 | bugmaster | Changeset attached | => occt master 7a76337e |
2014-08-15 11:25 | bugmaster | Status | tested => verified |
2014-08-15 11:25 | bugmaster | Resolution | open => fixed |
2014-08-18 11:07 | git | Note Added: 0030815 | |
2014-11-11 12:45 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:57 |
|
Status | verified => closed |